--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,6 @@
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
-           <!--  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button> -->
             <a class="navbar-brand" href="/">Dict</a>
         </div>
     </div>
@@ -20,8 +14,20 @@
 
 {% block content %}
 <div class="container">
+
+	{% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
     <div class="page-header">
         {{ wtf.quick_form(form) }}
     </div>
+
+
+    <p>Meaning: <br> {{ word }}</p>
+
 </div>
 {% endblock %}
