--- a/templates/index.html
+++ b/templates/index.html
@@ -14,22 +14,21 @@
 
 {% block content %}
 <div class="container">
+    <div class="page-header">
+        {{ wtf.quick_form(form) }}
+    </div>
 
-	{% for message in get_flashed_messages() %}
+    {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
     </div>
     {% endfor %}
 
-    <div class="page-header">
-        {{ wtf.quick_form(form) }}
-    </div>
-
-
+    {% if found %}
 	<p style="font-size: 30px;">Slang: <span style="color: #e67e22;">{{ word }}</span></p><br>
     <p style="font-size: 30px;">Meaning: <span style="color: #2ecc71;">{{ meaning }}</span></p>
-
+    {% endif %}
 
 </div>
 {% endblock %}
