Fixed navbar rounded corner, added portfolio, and social share buttons

--- a/templates/500.html
+++ b/templates/500.html
@@ -11,6 +11,6 @@
 		<img src="{{ url_for('static', filename='500.jpg') }}">
 
 		<br>
-		<p style="font-size: 20px; font-weight: 50;">Sorry... It's not you. It's us!</p>
+		<p style="font-size: 20px; font-weight: 50;">Sorry... It's not you. It's me!</p>
 	</div>
 {% endblock %}
