--- a/templates/404.html
+++ b/templates/404.html
@@ -6,11 +6,11 @@
 	<div class="container" style="text-align: center;">
 		<p style="font-size: 50px; font-weight: 1; color: #d35400;">404 Error</p>
 		<hr>
-		<p>Page Not Found <span class="glyphicon glyphicon-search"></span></p>
+		<p>Page Not Found&nbsp;&nbsp;<span class="glyphicon glyphicon-search"></span></p>
 
 		<img src="{{ url_for('static', filename='404.png') }}">
 
 		<br>
-		<p style="font-size: 20px; font-weight: 50;">The requested page has been eaten by Pacman.</p>
+		<p style="font-size: 20px; font-weight: 50;">I'm sorry. The requested page has been eaten by Pacman!!!</p>
 	</div>
 {% endblock %}
