--- a/templates/index.html
+++ b/templates/index.html
@@ -6,25 +6,90 @@
 {% block head %}
 {{ super() }}
 <!-- Icon by Freepik from Flaticon -->
-<link rel="shortcut icon" href="{{ url_for('static', filename='icon.png') }}"> 
+<link rel="shortcut icon" href="{{ url_for('static', filename='icon.png') }}">
+
+<!-- Font -->
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
+<!-- Ionicons -->
+<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+<link rel="canonical" href="https://dev.twitter.com/web/tweet-button">
+
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+{% endblock %}
 {% endblock %}
 
+
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
+
+<div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e">
+    <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
+
+<!--  <div class="navbar-header">
             <a class="navbar-brand" href="/">Slang Dict</a>
-        </div>
-    </div>
+        </div> -->
+
+    <ul class="nav navbar-nav pull-right">
+        <li class="dropdowm">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
+            
+            <ul class="dropdown-menu">
+                <li><a href="http://tinvo.xyz/"><i class="ion-briefcase"></i>&nbsp;&nbsp;PORTFOLIO</a></li>
+                <li><a href="http://tinvo.xyz/docs/Resume.pdf"><i class="ion-ios-list"></i>&nbsp;&nbsp;RESUME</a></li>
+                <li><a href="https://github.com/tinvo1101"><i class="ion-social-octocat"></i>&nbsp;&nbsp;GITHUB</a></li>
+                <li><a href="https://www.linkedin.com/in/tin-vo-654440a5"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
+            </ul>
+        </li>
+    </ul>
 </div>
 {% endblock %}
 
 {% block content %}
+{{ super() }}
+
+<script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
+<!-- CONTAINS -->
 <div class="container">
+    
+    <!-- Form -->
     <div class="page-header">
         {{ wtf.quick_form(form) }}
     </div>
 
+     <!-- Social share buttons -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1">SHARE:</div>
+            <div class="col-md-1"><a href="https://twitter.com/share" class="twitter-share-button"{count} data-url="http://slang-dict.herokuapp.com/" data-text="A Dictionary for Internet Slangs" data-via="tinnvo" data-related="tinnvo" data-hashtags="slang" style="margin: 0px;">Tweet</a></div>
+            <div class="col-md-1">
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+            <script type="IN/Share" data-url="http://slang-dict.herokuapp.com/"></script>
+            </div>
+            <div class="col-md-1"><a class="fb-share-button" data-href="http://slang-dict.herokuapp.com/" data-layout="button" style="width: 200px;"></a></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+
+    <!-- Flash messages -->
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -32,9 +97,24 @@
     </div>
     {% endfor %}
 
+    <!-- Results -->
     {% if found %}
 	<p style="font-size: 30px;">Slang: <span style="color: #e67e22;">{{ word }}</span></p><br>
     <p style="font-size: 30px;">Meaning: <span style="color: #2ecc71;">{{ meaning }}</span></p>
     {% endif %}
+
+</div>
+
+
+<!-- SCRIPTS -->
+{% block script %}
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+</script> 
+{% endblock %}
+
+
+<!-- FOOTER -->
+<div class="footer">
+    <p style="color: #fff; margin-top: 20px;"><a href="http://tinvo.xyz/" style="color: #fff;">Tin Vo &#169 2016</a></p>
 </div>
 {% endblock %}
