--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	margin-bottom: 60px;
+	margin-bottom: 120px;
 }
 
 .footer {
@@ -20,3 +20,7 @@ body {
 	background-color: #2c3e50;
 }
 
+.social-share {
+	position: absolute;
+	bottom: 60px;
+}
