--- a/templates/404.html
+++ b/templates/404.html
@@ -3,14 +3,19 @@
 {% block title %}Slang Dictionary - Page Not Found{% endblock %}
 
 {% block content %}
-	<div class="container" style="text-align: center;">
-		<p style="font-size: 50px; font-weight: 1; color: #d35400;">404 Error</p>
-		<hr>
-		<p>Page Not Found&nbsp;&nbsp;<span class="glyphicon glyphicon-search"></span></p>
+<div class="container" style="text-align: center;">
+	<p style="font-size: 50px; font-weight: 1; color: #d35400;">404 Error</p>
+	<hr>
+	<p>Page Not Found&nbsp;&nbsp;<span class="glyphicon glyphicon-search"></span></p>
 
-		<img src="{{ url_for('static', filename='404.png') }}">
+	<img src="{{ url_for('static', filename='404.png') }}">
 
-		<br>
-		<p style="font-size: 20px; font-weight: 50;">I'm sorry. The requested page has been eaten by Pacman!!!</p>
-	</div>
+	<br>
+	<p style="font-size: 20px; font-weight: 50;">I'm sorry. The requested page has been eaten by Pacman!!!</p>
+</div>
+
+<!-- FOOTER -->
+<div class="footer">
+    <p style="color: #fff; margin-top: 20px;"><a href="http://tinvo.xyz/" style="color: #fff;">Tin Vo &#169 2016</a></p>
+</div>
 {% endblock %}
