--- a/templates/500.html
+++ b/templates/500.html
@@ -3,14 +3,19 @@
 {% block title %}Slang Dictionary - Internal Server Error{% endblock %}
 
 {% block content %}
-	<div class="container" style="text-align: center;">
-		<p style="font-size: 50px; font-weight: 1; color: #d35400;">500 Error</p>
-		<hr>
-		<p>Internal Server Error <span class="glyphicon glyphicon-wrench"></span></p>
+<div class="container" style="text-align: center;">
+	<p style="font-size: 50px; font-weight: 1; color: #d35400;">500 Error</p>
+	<hr>
+	<p>Internal Server Error&nbsp;&nbsp;<span class="glyphicon glyphicon-wrench"></span></p>
 
-		<img src="{{ url_for('static', filename='500.jpg') }}">
+	<img src="{{ url_for('static', filename='500.jpg') }}">
 
-		<br>
-		<p style="font-size: 20px; font-weight: 50;">Sorry... It's not you. It's me!</p>
-	</div>
+	<br>
+	<p style="font-size: 20px; font-weight: 50;">Sorry... It's not you. It's me!</p>
+</div>
+
+<!-- FOOTER -->
+<div class="footer">
+    <p style="color: #fff; margin-top: 20px;"><a href="http://tinvo.xyz/" style="color: #fff;">Tin Vo &#169 2016</a></p>
+</div>
 {% endblock %}
