--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,6 @@
 <!-- Ionicons -->
 <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-<link rel="canonical" href="https://dev.twitter.com/web/tweet-button">
-
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -24,13 +22,8 @@
 
 
 {% block navbar %}
-
 <div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e">
     <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
-
-<!--  <div class="navbar-header">
-            <a class="navbar-brand" href="/">Slang Dict</a>
-        </div> -->
 
     <ul class="nav navbar-nav pull-right">
         <li class="dropdowm">
@@ -47,9 +40,9 @@
 </div>
 {% endblock %}
 
+
 {% block content %}
 {{ super() }}
-
 <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
@@ -60,15 +53,37 @@
 </script>
 
 
-<!-- CONTAINS -->
+<!-- CONTENTS -->
 <div class="container">
-    
     <!-- Form -->
     <div class="page-header">
         {{ wtf.quick_form(form) }}
     </div>
 
-     <!-- Social share buttons -->
+    <!-- Flash messages -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
+    <!-- Results -->
+    {% if found %}
+	<p style="font-size: 30px;">Slang: <span style="color: #e67e22;">{{ word }}</span></p><br>
+    <p style="font-size: 30px;">Meaning: <span style="color: #2ecc71;">{{ meaning }}</span></p>
+    {% endif %}
+</div>
+
+
+<!-- SCRIPTS -->
+{% block script %}
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+</script> 
+{% endblock %}
+
+<!-- Social share buttons -->
+<div class="social-share">
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
@@ -88,30 +103,7 @@
             <div class="col-md-1"></div>
         </div>
     </div>
-
-    <!-- Flash messages -->
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
-
-    <!-- Results -->
-    {% if found %}
-	<p style="font-size: 30px;">Slang: <span style="color: #e67e22;">{{ word }}</span></p><br>
-    <p style="font-size: 30px;">Meaning: <span style="color: #2ecc71;">{{ meaning }}</span></p>
-    {% endif %}
-
 </div>
-
-
-<!-- SCRIPTS -->
-{% block script %}
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-</script> 
-{% endblock %}
-
 
 <!-- FOOTER -->
 <div class="footer">
