fixed minor problems

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 
 {% block navbar %}
-<div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e">
+<div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e; width: 100%">
     <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
 
     <ul class="nav navbar-nav pull-right">
