Fixing share buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
 
     <ul class="nav navbar-nav pull-right">
-        <li class="dropdowm">
+        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
             
             <ul class="dropdown-menu">
@@ -83,27 +83,31 @@
 {% endblock %}
 
 <!-- Social share buttons -->
-<div class="social-share">
+<!-- <div class="social-share" style="text-align: center;">
     <div class="container">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1">SHARE:</div>
-            <div class="col-md-1"><a href="https://twitter.com/share" class="twitter-share-button"{count} data-url="http://slang-dict.herokuapp.com/" data-text="A Dictionary for Internet Slangs" data-via="tinnvo" data-related="tinnvo" data-hashtags="slang" style="margin: 0px;">Tweet</a></div>
-            <div class="col-md-1">
-            <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-            <script type="IN/Share" data-url="http://slang-dict.herokuapp.com/"></script>
+            <div class="col-md-8">
+                <div class="col-md-3">SHARE THIS:</div>
+
+                <div class="col-md-3">
+                    <a href="https://twitter.com/share" class="twitter-share-button"{count} data-url="http://slang-dict.herokuapp.com/" data-text="A Dictionary for Internet Slangs" data-via="tinnvo" data-related="tinnvo" data-hashtags="slang" style="margin: 0px;">Tweet</a>
+                </div>
+
+
+
+                <div class="col-md-3">
+                    <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+                    <script type="IN/Share" data-url="http://slang-dict.herokuapp.com/"></script>
+                </div>
+
+                <div class="col-md-3">
+                    <a class="fb-share-button" data-href="http://slang-dict.herokuapp.com/" data-layout="button" style="width: 200px;"></a>
+                </div>
             </div>
-            <div class="col-md-1"><a class="fb-share-button" data-href="http://slang-dict.herokuapp.com/" data-layout="button" style="width: 200px;"></a></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1"></div>
+            <div class="col-md-4"></div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- FOOTER -->
 <div class="footer">
