--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e; width: 100%">
     <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
 
-    <ul class="nav navbar-nav pull-right">
+    <!-- <ul class="nav navbar-nav pull-right">
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
             
@@ -36,7 +36,7 @@
                 <li><a href="https://www.linkedin.com/in/tin-vo-654440a5"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
             </ul>
         </li>
-    </ul>
+    </ul> -->
 </div>
 {% endblock %}
 
