--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
 
 
 {% block navbar %}
-<div class="navbar navbar-inverse clearfix" style="border-radius: 0; background-color: #34495e; width: 100%">
+<div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e; width: 100%">
     <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
 
     <ul class="nav navbar-nav pull-right">
-        <li class="dropdown">
+        <li class="dropdown clearfix">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
             
             <ul class="dropdown-menu">
