--- a/templates/index.html
+++ b/templates/index.html
@@ -22,21 +22,25 @@
 
 
 {% block navbar %}
-<div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e; width: 100%">
-    <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
+<div class="container-fluid">
+    <div class="row">
+        <div class="navbar navbar-inverse" style="border-radius: 0; background-color: #34495e; width: 100%">
+            <a class="navbar-header navbar-brand" id="logo" href="/" >Slang Dict</a>
 
-    <ul class="nav navbar-nav pull-right">
-        <li class="dropdown clearfix">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
-            
-            <ul class="dropdown-menu">
-                <li><a href="http://tinvo.xyz/"><i class="ion-briefcase"></i>&nbsp;&nbsp;PORTFOLIO</a></li>
-                <li><a href="http://tinvo.xyz/docs/Resume.pdf"><i class="ion-ios-list"></i>&nbsp;&nbsp;RESUME</a></li>
-                <li><a href="https://github.com/tinvo1101"><i class="ion-social-octocat"></i>&nbsp;&nbsp;GITHUB</a></li>
-                <li><a href="https://www.linkedin.com/in/tin-vo-654440a5"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
+            <ul class="nav navbar-nav pull-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
+                    
+                    <ul class="dropdown-menu">
+                        <li><a href="http://tinvo.xyz/"><i class="ion-briefcase"></i>&nbsp;&nbsp;PORTFOLIO</a></li>
+                        <li><a href="http://tinvo.xyz/docs/Resume.pdf"><i class="ion-ios-list"></i>&nbsp;&nbsp;RESUME</a></li>
+                        <li><a href="https://github.com/tinvo1101"><i class="ion-social-octocat"></i>&nbsp;&nbsp;GITHUB</a></li>
+                        <li><a href="https://www.linkedin.com/in/tin-vo-654440a5"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
+                    </ul>
+                </li>
             </ul>
-        </li>
-    </ul>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
