--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
                     </ul>
                 </li>
             </ul>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
@@ -47,14 +48,6 @@
 
 {% block content %}
 {{ super() }}
-<script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-</script>
 
 
 <!-- CONTENTS -->
@@ -80,38 +73,6 @@
 </div>
 
 
-<!-- SCRIPTS -->
-{% block script %}
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-</script> 
-{% endblock %}
-
-<!-- Social share buttons -->
-<!-- <div class="social-share" style="text-align: center;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="col-md-3">SHARE THIS:</div>
-
-                <div class="col-md-3">
-                    <a href="https://twitter.com/share" class="twitter-share-button"{count} data-url="http://slang-dict.herokuapp.com/" data-text="A Dictionary for Internet Slangs" data-via="tinnvo" data-related="tinnvo" data-hashtags="slang" style="margin: 0px;">Tweet</a>
-                </div>
-
-
-
-                <div class="col-md-3">
-                    <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-                    <script type="IN/Share" data-url="http://slang-dict.herokuapp.com/"></script>
-                </div>
-
-                <div class="col-md-3">
-                    <a class="fb-share-button" data-href="http://slang-dict.herokuapp.com/" data-layout="button" style="width: 200px;"></a>
-                </div>
-            </div>
-            <div class="col-md-4"></div>
-        </div>
-    </div>
-</div> -->
 
 <!-- FOOTER -->
 <div class="footer">
