--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
 
 {% block head %}
 {{ super() }}
+
+<!-- Mobile viewport optimized -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 <!-- Icon by Freepik from Flaticon -->
 <link rel="shortcut icon" href="{{ url_for('static', filename='icon.png') }}">
 
