--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,7 @@
 {% block title %}Slang Dictionary - Page Not Found{% endblock %}
 
 {% block content %}
+{{ super() super() }}
 <div class="container" style="text-align: center;">
 	<p style="font-size: 50px; font-weight: 1; color: #d35400;">404 Error</p>
 	<hr>
