--- a/templates/index.html
+++ b/templates/index.html
@@ -82,4 +82,19 @@
 <div class="footer">
     <p style="color: #fff; margin-top: 20px;"><a href="http://tinvo.xyz/" style="color: #fff;">Tin Vo &#169 2016</a></p>
 </div>
+
+
+<!-- GOOGLE ANALYTICS -->
+{% block script %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-72765581-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+{% endblock %}
 {% endblock %}
