--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">TIN VO <span class="caret" style="margin-right: 50px;"></span></a>
                     
                     <ul class="dropdown-menu">
-                        <li><a href="http://tinvo.xyz/"><i class="ion-briefcase"></i>&nbsp;&nbsp;PORTFOLIO</a></li>
-                        <li><a href="http://tinvo.xyz/docs/Resume.pdf"><i class="ion-ios-list"></i>&nbsp;&nbsp;RESUME</a></li>
+                        <li><a href="https://tinvo1101.github.io/"><i class="ion-briefcase"></i>&nbsp;&nbsp;PORTFOLIO</a></li>
+                        <li><a href="https://tinvo1101.github.io/docs/Resume.pdf"><i class="ion-ios-list"></i>&nbsp;&nbsp;RESUME</a></li>
                         <li><a href="https://github.com/tinvo1101"><i class="ion-social-octocat"></i>&nbsp;&nbsp;GITHUB</a></li>
-                        <li><a href="https://www.linkedin.com/in/tin-vo-654440a5"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
+                        <li><a href="https://www.linkedin.com/in/tinnvo"><i class="ion-social-linkedin"></i>&nbsp;&nbsp;LINKEDIN</a></li>
                     </ul>
                 </li>
             </ul>
@@ -80,7 +80,7 @@
 
 <!-- FOOTER -->
 <div class="footer">
-    <p style="color: #fff; margin-top: 20px;"><a href="http://tinvo.xyz/" style="color: #fff;">Tin Vo &#169 2016</a></p>
+    <p style="color: #fff; margin-top: 20px;"><a href="https://tinvo1101.github.io/" style="color: #fff;">Tin Vo &#169 2016</a></p>
 </div>
 
 
